Barra de vida criada e comentários

--- a/style.css
+++ b/style.css
@@ -138,9 +138,38 @@ a.btn-3d i {
   background-size: cover;
   height: 500px;
   width: 900px;
-  align-items: center;
-  justify-content: center;
   border: solid 3px black;
   border-radius: 10px;
-  margin: 40px 20px;
+}
+
+.container {
+  height: 10px;
+  background-color: #ccc;
+  position: relative;
+  width: 200px;
+  border-radius: 10px;
+}
+
+.container .progress-bar {
+  position: absolute;
+  height: 100%;
+  background-color: #0fd439;
+  animation: progress-animation 2s infinite;
+  border-radius: 10px;
+  border: 2px solid black;
+  font-size: 10px;
+}
+
+@keyframes progress-animation {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+progress {
+  width: 200px;
+  height: 20px;
 }
