--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@ a.btn-3d i {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 200px;
+  width: auto;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -154,12 +157,13 @@ a.btn-3d i {
 
   background-image: url(./images/battlebgroute_by_aveontrainer_ddpvmlj.png);
   background-size: cover;
-  height: 500px;
-  width: 900px;
+  height: 400px;
+  width: 700px;
   border: solid 3px black;
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 40px;
 }
 
 .container {
@@ -199,4 +203,8 @@ img {
   width: 80px;
   height: 80px;
   border-radius: 8px;
+}
+
+#confirmBtn {
+  margin-top: 200px;
 }
