--- a/style.css
+++ b/style.css
@@ -151,10 +151,9 @@ a.btn-3d i {
   border: 4px double black;
   align-items: center;
   cursor: pointer;
-  
 }
 
-.card:focus { 
+.card:focus {
   background-color: red;
 }
 
@@ -213,5 +212,17 @@ img {
 
 #confirmBtn {
   margin-top: 200px;
+}
+
+.premio {
+  border-radius: 7px;
+  width: 400px;
+  background-color: dodgerblue;
+  border: 4px solid black;
+  font-family: "Fredoka One";
+}
+
+.personagemSelecionado {
+  border: 4px solid red;
 }
 
