--- a/style.css
+++ b/style.css
@@ -212,7 +212,6 @@ img {
 
 #confirmBtn {
   margin-top: 200px;
-  
 }
 
 .premio {
@@ -227,3 +226,6 @@ img {
   border: 4px solid red;
 }
 
+#retornarBtn {
+  margin-top: 20px;
+}
